--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET"
-        android:maxSdkVersion="34"/>
-
+    <uses-permission
+        android:name="android.permission.INTERNET"
+        android:maxSdkVersion="34" />
 
     <application
         android:allowBackup="true"
@@ -18,9 +18,12 @@
         android:theme="@style/Theme.MyAnimeApp"
         tools:targetApi="31">
         <activity
+            android:name=".FullAnimeActivity"
+            android:exported="false" />
+        <activity
             android:name=".ProfileActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".AnimeActivity"
             android:exported="false" />
